scripts/tests/errors/err_undefined_variable.bu
// Test: undefined variable access
// Expected: compile or runtime error, not crash

print(totally_undefined_variable_xyz)
